compiler-core/src/webassembly/tests/snapshots/gleam_core__webassembly__tests__errors__int_literal_overflow_i32.snap
---
source: compiler-core/src/webassembly/tests/errors.rs
assertion_line: 79
expression: "\npub fn main() {\n    2147483648\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    2147483648
}


----- ERROR
IntLiteralOutOfRange { location: SrcSpan { start: 21, end: 31 }, value: "2147483648", target: "I32" }
