compiler-core/src/webassembly/tests/snapshots/gleam_core__webassembly__tests__errors__int_literal_underflow_i32.snap
---
source: compiler-core/src/webassembly/tests/errors.rs
assertion_line: 90
expression: "\npub fn main() {\n    -2147483649\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    -2147483649
}


----- ERROR
IntLiteralOutOfRange { location: SrcSpan { start: 21, end: 32 }, value: "-2147483649", target: "I32" }
