compiler-core/src/webassembly/tests/snapshots/gleam_core__webassembly__tests__errors__unknown_external_type.snap
---
source: compiler-core/src/webassembly/tests/errors.rs
assertion_line: 3
expression: "\n@external(webassembly, \"builtins\", \"F128\")\ntype MyFloat\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(webassembly, "builtins", "F128")
type MyFloat


----- ERROR
UnknownExternalType { location: SrcSpan { start: 1, end: 43 }, name: "F128" }
